--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% block styles %}
+        {%  endblock %}
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
