--- a/templates/feedback_all.html.twig
+++ b/templates/feedback_all.html.twig
@@ -2,6 +2,7 @@
 
 {% block title %}Все сообщения{% endblock %}
 {% block styles %}
+    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('style.css') }}">
 {%  endblock %}
 
